# rsa-avalanche

./: .gitignore  .gitlab-ci.yml  AGENTS.md  API.md  ARCHITECTURE.md  ARTICLE.md  CGEN.md  CHANGELOG.md  CONFIGS.md  CONTRIBUTORS.md  Cargo.toml  DATASET.md  DEMO.md  LATTICES.md  MESSAGES.md  Makefile  README.md  TODO.md  logs_current.logs  make_mp4.sh  r_candidates.csv  requirements.txt  rgen_output_smaller.csv  rsa_config.json  rsa_config_base_256.json  rsa_config_base_medium.json  rsa_config_demo.json  rsa_config_medium.json  rsa_config_small.json
.github/workflows/: rust-ci.yml
ansible/: create-code.yml  inventory.ini  teardown.yml
config/: rsa_config.json  rsa_config_base_256.json  rsa_config_demo.json  rsa_config_medium.json  rsa_config_small.json  rsa_config_small_batch.json  rsa_config_small_batch.json.orig  rsa_config_small_public_key_demo_512.json  rsa_config_small_public_key_test.json
config/keys/: pgp_file.example.yaml  prep_pgp_512_identity.env  prep_pgp_512_private_key.yaml  prep_pgp_512_public.asc  prep_pgp_512_public_key.yaml  prep_pgp_identity.env  prep_pgp_private_key.yaml  prep_pgp_public.asc  prep_pgp_public_key.yaml  private_key.example.yaml  private_key_1024.yaml  private_key_2048.yaml  public_key.example.yaml  public_key_1024.yaml  public_key_2048.yaml  small_batch_current_keypair.yaml  small_batch_current_public_key.yaml  small_batch_original_keypair.yaml  small_batch_original_public_key.yaml
config/pgp/: prep_blob_1.asc  prep_blob_1.txt  prep_blob_2.asc  prep_blob_2.txt  prep_blob_3.asc  prep_blob_3.txt  prep_blob_4.asc  prep_blob_4.txt  prep_blob_5.asc  prep_blob_5.txt
data/: r_candidates.csv  rgen_grid_summary_small.csv  rgen_output.csv  rgen_output_256.csv  rgen_output_base.csv  rgen_output_demo_2.csv
data/rgen_grid/: rgen_grid_pct_05.csv  rgen_grid_pct_10.csv  rgen_grid_pct_20.csv  rgen_grid_pct_30.csv  rgen_grid_pct_40.csv  rgen_grid_pct_5.csv  rgen_grid_pct_50.csv  rgen_grid_pct_60.csv
data/rgen_grid_medium/: rgen_grid_medium_pct_05.csv  rgen_grid_medium_pct_10.csv  rgen_grid_medium_pct_20.csv  rgen_grid_medium_pct_30.csv  rgen_grid_medium_pct_40.csv  rgen_grid_medium_pct_50.csv
docs/diagrams/: HBC-Avalanche.drawio  HBC-Methods.drawio
historical/videos-20260226-0010/: .gitattributes
scripts/: aggregate_rgen_grid.py  beam_search_example.py  bit_denoiser.py  build_public_key_demo.py  convert_rsa_yaml_to_pgp.py  do_prep_pgp.sh  enciphered_bins_video.py  extract_pkesk.py  grid_search_builder.py  hex_bit_diff.py  install_deps.sh  make_deploy.sh  make_rgen.sh  make_rgen_grid.sh  make_rgen_small.sh  merge_session_logs.py  r_candidate_cnn.py  run_demo_encrypt_256.sh  run_grid_search.sh  run_medium_batch.sh  run_medium_batch_beam.sh  run_rcnn.sh  run_shifted_batch.sh  run_shifted_batch_verbose.sh  run_small_batch.sh  run_small_batch_beam.sh  run_small_public_key_demo.sh  run_small_public_key_test.sh  session_jq.sh  session_viewer.py  show_center_biases.py
specs/: ZMQ_SPEC.md
src/: analytics.rs  avalanche.rs  bitflow.rs  combiner.rs  config.rs  database.rs  dsp.rs  fitness.rs  graph.rs  helpers.rs  lattices.rs  lib.rs  logs.rs  math.rs  math_rational.rs  methods.rs  pgp.rs  polynomial_fields.rs  polynomials.rs  r_candidates.rs  rng.rs  search.rs  solver.rs  windows.rs  zmq_status.rs
web/: index.html  viewer.d.ts  viewer.js  viewer_bg.wasm.d.ts
(+40 files in other folders)
