[package]
name = "rsademo"
version = "0.1.0"
edition = "2024"

[dependencies]
cty = "0.2.2"
hex = "0.4.3"
num-bigint = { version = "0.4", default-features = false, features = ["std"] }
num-integer = "0.1"
num-traits = "0.2"
libc = "0.2.175"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
rayon = "1.10"
plotters = { version = "0.3.6", optional = true }
ctrlc = "3.4.5"

[dev-dependencies]
insta = { version = "1.38.0", features = ["yaml"] }

[features]
default = []
plots = ["plotters"]
