[package]
name = "rsademo"
version = "0.1.0"
edition = "2024"

[dependencies]
cty = "0.2.2"
hex = "0.4.3"
num-bigint = { version = "0.4", default-features = false, features = ["std"] }
num-integer = "0.1"
num-traits = "0.2"
libc = "0.2.175"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
rayon = "1.10"
plotters = { version = "0.3.6", optional = true }
linfa = { version = "0.7.0", optional = true }
linfa-reduction = { version = "0.7.0", optional = true }
linfa-clustering = { version = "0.7.0", optional = true }
ndarray = { version = "0.15.6", optional = true }
zmq = "0.10.0"
ctrlc = "3.4.5"
eframe = "0.27"
egui_extras = "0.27"
egui_plot = "0.27"
tiny_http = "0.12"
urlencoding = "2.1"

[dev-dependencies]
insta = { version = "1.38.0", features = ["yaml"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Response", "Window"] }

[features]
default = []
plots = ["plotters"]
pca = ["plots", "linfa", "linfa-reduction", "ndarray"]
cluster = ["pca", "linfa-clustering"]
